syntax = "proto3";

message Attachment {
	string channel_id = 1;
	string player_id = 2;
}
